--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ nvidia-graphics-drivers (275.09.07-3) UNRELEASED; urgency=low
   * Add XS-Autobuild: yes to debian/control.  See instructions in #602838.
   * Install nvidia_drv.so into /usr/lib/nvidia and let the glx alternative
     handle appropriate symlinks in /usr/lib/xorg.
+  * Convert the Conflicts: fglrx-* to versioned Breaks: fglrx-* as we should
+    be co-installable by now.  (Closes: #610021)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 20 Jun 2011 10:44:37 +0200
 
