--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,10 @@ nvidia-graphics-drivers (275.09.07-3) UNRELEASED; urgency=low
     into a version specific directory /usr/lib/nvidia/{current,legacy-*}:
     libGL.so.1, libglx.so, nvidia_drv.so, libnvidia-cfg.so.1,
     libXvMCNVIDIA.so.1, libXvMCNVIDIA_dynamic.so.1, nvidia-bug-report.sh.
-  * Install nvidia_drv.so into /usr/lib/nvidia and let the glx alternative
-    handle appropriate symlinks in /usr/lib/xorg.
+  * The 'nvidia' alternative (set up by package nvidia-alternative{,-legacy-*})
+    handles creation of appropriate symlinks in /usr/lib/nvidia.
+  * The 'glx' alternative (set up by package glx-alternative-nvidia) handles
+    creation of appropriate symlinks in /usr/lib, /usr/lib/xorg, etc.
   * Convert the Conflicts: fglrx-* to versioned Breaks: fglrx-* as we should
     be co-installable by now.  (Closes: #610021)
 
