--- a/debian/changelog
+++ b/debian/changelog
@@ -14,9 +14,10 @@ nvidia-graphics-drivers (275.09.07-3) UNRELEASED; urgency=low
     creation of appropriate symlinks in /usr/lib, /usr/lib/xorg, etc.
   * Update bug-script to list files in the new private directory as well as in
     multiarch directories.
-  * Enable multiarch.
+  * Enable multiarch build.
     - Add Multi-Arch: same/foreign/allowed.
     - Use compat level 9.
+    - Work around missing multiarch support in libvdpau1.
   * Convert the Conflicts: fglrx-* to versioned Breaks: fglrx-* as we should
     be co-installable by now.  (Closes: #610021)
 
