Add Conflicts: lib{*}-ia32 [i386] to lib{*} to prevent mixing multiarch and biarch packages, e.g. lib{*}:i386 and lib{*}-ia32:amd64 on amd64.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2196 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ nvidia-graphics-drivers (275.09.07-3) UNRELEASED; urgency=low
     - Add Multi-Arch: same/foreign/allowed.
     - Use compat level 9.
     - Work around missing multiarch support in libvdpau1.
+  * Add Conflicts: lib{*}-ia32 [i386] to lib{*} to prevent mixing multiarch
+    and biarch packages, e.g. lib{*}:i386 and lib{*}-ia32:amd64 on amd64.
   * Convert the Conflicts: fglrx-* to versioned Breaks: fglrx-* as we should
     be co-installable by now.  (Closes: #610021)
 
