Drop empty directories from xserver-xorg-driver-nvidia, these are provided by glx-alternative-nvidia.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2230 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nvidia-graphics-drivers (275.09.07-4) UNRELEASED; urgency=low
   * Drop lintian 2.4.3 compatibility overrides.
   * Ship the /usr/lib/nvidia/current directory in the nvidia-alternative
     package to ensure the master alternative exists.
+  * Drop empty directories from xserver-xorg-driver-nvidia, these are provided
+    by glx-alternative-nvidia.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 24 Jun 2011 02:06:05 +0200
 
