convert some lintian overrides to 2.5.1 [arch] list format
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2255 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ nvidia-graphics-drivers (275.09.07-4) UNRELEASED; urgency=low
     by glx-alternative-nvidia.
   * Update bug-control to report information about some of the recently
     added/renamed packages.
+  * Convert some lintian overrides to use the [arch] format (lintian 2.5.1).
 
  -- Andreas Beckmann <debian@abeckmann.de>  Fri, 24 Jun 2011 02:06:05 +0200
 
