Run check-for-conflicting-opengl-libraries from libgl1-nvidia*-glx{,-ia32} postinst.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2262 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (275.09.07-5) UNRELEASED; urgency=low
+
+  * Run check-for-conflicting-opengl-libraries from libgl1-nvidia*-glx{,-ia32}
+    postinst.
+  * Add Depends: nvidia-support to libgl1-nvidia*-glx{,-ia32}.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 28 Jun 2011 11:56:22 +0200
+
 nvidia-graphics-drivers (275.09.07-4) unstable; urgency=low
 
   * Upload to unstable.
