Add Breaks: nvidia-smi (<< $(nvidia:Version}) to libnvidia-ml1 because the interface is changing frequently but the soname is kept.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/280.xx@2286 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ nvidia-graphics-drivers (280.04-1) UNRELEASED; urgency=low
       exiting applications, and also when toggling to and from full-screen
       mode in Adobe Flash.
   * Update symbols control files.
+  * Add Breaks: nvidia-smi (<< $(nvidia:Version}) to libnvidia-ml1 because the
+    interface is changing frequently but the soname is kept.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sun, 03 Jul 2011 10:58:36 +0200
 
