--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ nvidia-graphics-drivers (280.04-1) UNRELEASED; urgency=low
   * Update symbols control files.
   * Add Breaks: nvidia-smi (<< $(nvidia:Version}) to libnvidia-ml1 because the
     interface is changing frequently but the soname is kept.
+  * Update lintian overrides.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sun, 03 Jul 2011 10:58:36 +0200
 
