--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (280.04-2) UNRELEASED; urgency=low
+
+  * Drop lintian 2.5.0 compat overrides, ftp-master was updated to 2.5.1.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sun, 03 Jul 2011 22:32:10 +0200
+
 nvidia-graphics-drivers (280.04-1) experimental; urgency=low
 
   [ Andreas Beckmann ]
