--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ nvidia-graphics-drivers (275.09.07-5) UNRELEASED; urgency=low
 
   * Run check-for-conflicting-opengl-libraries from libgl1-nvidia*-glx{,-ia32}
     and xserver-xorg-video-nvidia* postinst.
+  * Run check-for-mismatching-nvidia-module from libgl1-nvidia*-glx{,-ia32},
+    xserver-xorg-video-nvidia* and libcuda1{,-ia32} postinst, if available.
+    (Closes: #620327)
   * Add Depends: nvidia-support to libgl1-nvidia*-glx{,-ia32}.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 28 Jun 2011 11:56:22 +0200
