--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,8 @@ nvidia-graphics-drivers (275.09.07-5) UNRELEASED; urgency=low
   * Run check-for-mismatching-nvidia-module from libgl1-nvidia*-glx{,-ia32},
     xserver-xorg-video-nvidia* and libcuda1{,-ia32} postinst, if available.
     (Closes: #620327)
-  * Add Depends: nvidia-support to libgl1-nvidia*-glx{,-ia32}.
+  * Add Depends: nvidia-support to libgl1-nvidia*-glx{,-ia32} and
+    xserver-xorg-video-nvidia.
   * Add Breaks: nvidia-smi (<< $(nvidia:Version}) to libnvidia-ml1 because the
     interface is changing frequently but the soname is kept.
   * Convert lintian overrides to use the [arch] format (lintian 2.5.1) instead
