Generate some *-ia32.lintian-overrides by swapping [i386] and [amd64].
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2319 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,7 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
     related Depends/Provides, compute the values in debian/rules.
     Add compatibility settings for old Xorg versions for backports only.
   * Convert lintian-overrides to use [arch lists] introduced in lintian 2.5.1.
+  * Generate some *-ia32.lintian-overrides by swapping [i386] and [amd64].
   * Add preliminary Multi-Arch support, can be enabled by setting the
     MULTIARCH variable in debian/rules.defs:
     - Add ${misc:Pre-Depends} to all library packages.
