--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,8 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
   * Generate some *-ia32.lintian-overrides by swapping [i386] and [amd64].
   * Fall back to the old version of nvidia.ids if extract-pci-ids.sh failed.
   * Remove support for restoring the upstream layout used up to 195xx.
+  * Add Conflicts: lib{*}-ia32 [i386] to lib{*} to prevent mixing multiarch
+    and biarch packages, e.g. lib{*}:i386 and lib{*}-ia32:amd64 on amd64.
   * Add preliminary Multi-Arch support, can be enabled by setting the
     MULTIARCH variable in debian/rules.defs:
     - Add ${misc:Pre-Depends} to all library packages.
