--- a/debian/changelog
+++ b/debian/changelog
@@ -63,6 +63,7 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
 
 nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
 
+  [ Andreas Beckmann ]
   * Merge general changes from 256xx/260xx releases:
   * Use dpkg-parsechangelog to extract the upstream version number from
     debian/changelog, simplifying debian/rules.defs even more.
@@ -144,6 +145,7 @@ nvidia-graphics-drivers (195.36.31-90) UNRELEASED; urgency=low
 
 nvidia-graphics-drivers (195.36.31-7) unstable; urgency=medium
 
+  [ Andreas Beckmann ]
   * Security fix.  (Closes: #609338)
     Apply upstream patch NVIDIA_kernel-260.19.34-778465.diff to fix
     information leak in the kernel module: kernel memory was returned
@@ -158,6 +160,7 @@ nvidia-graphics-drivers (195.36.31-7) unstable; urgency=medium
 
 nvidia-graphics-drivers (195.36.31-6) unstable; urgency=low
 
+  [ Andreas Beckmann ]
   * If both original and diverted file exist when removing obsolete
     diversions, move the original file (which is not owned by any package) out
     of the way.  This problem may originate from incorrect diversion creation
