--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+nvidia-graphics-drivers (195.36.31-92) UNRELEASED; urgency=low
+
+  [ Andreas Beckmann ]
+  * Add preliminary Multi-Arch support, can be enabled by setting the
+    MULTIARCH variable in debian/rules.defs:
+    - Add ${misc:Pre-Depends} to all library packages.
+    - Add #LIBDIR# substitution variable for generated control files.
+  * Add support for installing the libraries of current and legacy drivers in
+    parallel, add #PRIVATE# substitution variable for generated control files.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 05 Jul 2011 17:17:36 +0200
+
 nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
@@ -49,12 +61,8 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
   * Add Conflicts: lib{*}-ia32 [i386] to lib{*} to prevent mixing multiarch
     and biarch packages, e.g. lib{*}:i386 and lib{*}-ia32:amd64 on amd64.
   * Add XS-Autobuild: yes to debian/control.  See instructions in #602838.
-  * Add preliminary Multi-Arch support, can be enabled by setting the
-    MULTIARCH variable in debian/rules.defs:
-    - Add ${misc:Pre-Depends} to all library packages.
-    - Add #LIBDIR# substitution variable for generated control files.
-  * Add support for installing the libraries of current and legacy drivers in
-    parallel, add #PRIVATE# substitution variable for generated control files.
+  * Add #LIBDIR# and #PRIVATE# substitution variables for generated control
+    files.
 
   [ Russ Allbery ]
   * Add DM-Upload-Allowed: yes to debian/control.
