--- a/debian/changelog
+++ b/debian/changelog
@@ -61,6 +61,7 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
   * Add Conflicts: lib{*}-ia32 [i386] to lib{*} to prevent mixing multiarch
     and biarch packages, e.g. lib{*}:i386 and lib{*}-ia32:amd64 on amd64.
   * Add XS-Autobuild: yes to debian/control.  See instructions in #602838.
+  * Add #MAJOR# substitution variable.
   * Add #LIBDIR# and #PRIVATE# substitution variables for generated control
     files.
 
