--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
 nvidia-graphics-drivers (195.36.31-92) UNRELEASED; urgency=low
 
   [ Andreas Beckmann ]
+  * Switch to multiarch-aware diversion and alternatives handling provided by
+    the glx-diversions/glx-alternative-nvidia packages.
+  * Convert old packages libgl{1,x}-nvidia-alternatives to transitional ones.
+  * Note: The diversion and alternative handling of
+    libgl1-nvidia-{glx,alternatives}-ia32 is not being changed.
+    These packages will become obsolete by adding multiarch support.
   * Add preliminary Multi-Arch support, can be enabled by setting the
     MULTIARCH variable in debian/rules.defs:
     - Add ${misc:Pre-Depends} to all library packages.
