--- a/debian/changelog
+++ b/debian/changelog
@@ -18,8 +18,10 @@ nvidia-graphics-drivers (195.36.31-92) UNRELEASED; urgency=low
     into a version specific directory /usr/lib/nvidia/{current,legacy-*}:
     libGL.so.1, libglx.so, nvidia_drv.so, libnvidia-cfg.so.1,
     libXvMCNVIDIA.so.1, libXvMCNVIDIA_dynamic.so.1, nvidia-bug-report.sh.
-  * Install nvidia_drv.so into /usr/lib/nvidia and let the glx alternative
-    handle appropriate symlinks in /usr/lib/xorg.
+  * The 'nvidia' alternative (set up by package nvidia-alternative{,-legacy-*})
+    handles creation of appropriate symlinks in /usr/lib/nvidia.
+  * The 'glx' alternative (set up by package glx-alternative-nvidia) handles
+    creation of appropriate symlinks in /usr/lib, /usr/lib/xorg, etc.
   * Add preliminary Multi-Arch support, can be enabled by setting the
     MULTIARCH variable in debian/rules.defs:
     - Add ${misc:Pre-Depends} to all library packages.
