Work around missing multiarch support in libvdpau1.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2357 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,7 @@ nvidia-graphics-drivers (195.36.31-92) UNRELEASED; urgency=low
     MULTIARCH variable in debian/rules.defs:
     - Add ${misc:Pre-Depends} to all library packages.
     - Add #LIBDIR# substitution variable for generated control files.
+    - Work around missing multiarch support in libvdpau1.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 05 Jul 2011 17:17:36 +0200
 
