--- a/debian/changelog
+++ b/debian/changelog
@@ -35,10 +35,11 @@ nvidia-graphics-drivers (195.36.31-92) UNRELEASED; urgency=low
     added/renamed packages.
   * Run check-for-conflicting-opengl-libraries from libgl1-nvidia*-glx{,-ia32}
     and xserver-xorg-video-nvidia* postinst.
-  * Add preliminary Multi-Arch support, can be enabled by setting the
-    MULTIARCH variable in debian/rules.defs:
+  * Enable multiarch.
     - Add ${misc:Pre-Depends} to all library packages.
-    - Add #LIBDIR# substitution variable for generated control files.
+    - Add Multi-Arch: same/foreign/allowed.
+    - Use compat level 9.
+    - Use #LIBDIR# substitution variable.
     - Work around missing multiarch support in libvdpau1.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 05 Jul 2011 17:17:36 +0200
