Run check-for-mismatching-nvidia-module from libgl1-nvidia*-glx{,-ia32}, xserver-xorg-video-nvidia* and libcuda1{,-ia32} postinst, if available.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2359 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,8 @@ nvidia-graphics-drivers (195.36.31-92) UNRELEASED; urgency=low
     - Use compat level 9.
     - Use #LIBDIR# substitution variable.
     - Work around missing multiarch support in libvdpau1.
+  * Run check-for-mismatching-nvidia-module from libgl1-nvidia*-glx{,-ia32},
+    xserver-xorg-video-nvidia* and libcuda1{,-ia32} postinst, if available.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 05 Jul 2011 17:17:36 +0200
 
