--- a/debian/changelog
+++ b/debian/changelog
@@ -44,6 +44,8 @@ nvidia-graphics-drivers (195.36.31-92) UNRELEASED; urgency=low
   * Run check-for-mismatching-nvidia-module from libgl1-nvidia*-glx{,-ia32},
     xserver-xorg-video-nvidia* and libcuda1{,-ia32} postinst, if available.
   * Run create-xorg-nvidia-conf from xserver-xorg-video-nvidia* postinst.
+  * Add Depends: nvidia-support to libgl1-nvidia*-glx{,-ia32} and
+    xserver-xorg-video-nvidia.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 05 Jul 2011 17:17:36 +0200
 
