--- a/debian/changelog
+++ b/debian/changelog
@@ -95,6 +95,8 @@ nvidia-graphics-drivers (195.36.31-91) UNRELEASED; urgency=low
   * Generate some *-ia32.lintian-overrides by swapping [i386] and [amd64].
   * Fall back to the old version of nvidia.ids if extract-pci-ids.sh failed.
   * Remove support for restoring the upstream layout used up to 195xx.
+  * Canonicalize the location of upstream's README.txt, NVIDIA_Changelog and
+    kernel module source path.
   * Add Conflicts: lib{*}-ia32 [i386] to lib{*} to prevent mixing multiarch
     and biarch packages, e.g. lib{*}:i386 and lib{*}-ia32:amd64 on amd64.
   * Add XS-Autobuild: yes to debian/control.  See instructions in #602838.
